FIX: Paint search field text white in dark mode.

--- a/source/style.css
+++ b/source/style.css
@@ -123,6 +123,7 @@ a {
 .Input input {
 	width:   inherit;
 	display: block;
+	color: var(--text-color);
 }
 
 .Timer {
